--- a/manager/web/style.less
+++ b/manager/web/style.less
@@ -157,6 +157,30 @@ table#board {
 	td.floor { background-color:#FFF; }
 }
 
+.side {
+	background:#AAA;
+	border:1px solid #DDD;
+	border-radius:3px;
+	width:10%;
+	position:absolute;
+	top:50%;
+	.boxsizing;
+	padding:0.5em;
+}
+
+#c_side {
+	left:0;
+}
+
+#h_side {
+	right:0;
+}
+
+
+
+
+
+
 
 /*------------------------------*/
 /*             関数             */
