--- a/manager/web/style.less
+++ b/manager/web/style.less
@@ -157,6 +157,9 @@ table#board {
 	td.item { background-image:url('heart.svg'); }
 	td.block { background-image:url('block.svg'); }
 	td.floor { background-color:#FFF; }
+	.block.c { background-image:url('c.svg'), url('block.svg'); }
+	.block.h { background-image:url('h.svg'), url('block.svg'); }
+	.h.c{ background-image:url('h.svg'), url('c.svg'); }
 }
 
 .side {
